--- a/helpers/templates/users.html
+++ b/helpers/templates/users.html
@@ -56,7 +56,7 @@
                     </tr>
                     {{#each data.active}}
                     <tr>
-                        <th>{{this.name}}</th>
+                        <td>{{this.name}}</td>
                         <td>{{this.lastname}}</td>
                         <td>{{this.email}}</td>
                         <td>{{this.user}}</td>
@@ -68,7 +68,7 @@
                     </tr>
                     {{#each data.inactive}}
                     <tr>
-                        <th>{{this.name}}</th>
+                        <td>{{this.name}}</td>
                         <td>{{this.lastname}}</td>
                         <td>{{this.email}}</td>
                         <td>{{this.user}}</td>
@@ -80,7 +80,7 @@
                     </tr>
                     {{#each data.banned}}
                     <tr>
-                        <th>{{this.name}}</th>
+                        <td>{{this.name}}</td>
                         <td>{{this.lastname}}</td>
                         <td>{{this.email}}</td>
                         <td>{{this.user}}</td>
