validar tiempo de codigo

--- a/views/include/newPassword.ejs
+++ b/views/include/newPassword.ejs
@@ -1,6 +1,8 @@
 <form id="form_p">
     <div class="modal-body">
         <div class="col-mb-3">
+            <label for="code" class="form-label">codigo:</label>
+            <input type="text" class="form-control" id="code">
             <label for="password" class="form-label">Contraseña:</label>
             <input type="password" class="form-control" id="password" >
             <label for="password_confirm" class="form-label">Confirmar contraseña:</label>
