--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -1,4 +1,5 @@
-<button class="btnLogin-popup d-flex align-items-center" id="btn-login"><img class="mx-1" width="20" height="20" src="https://img.icons8.com/ios/20/enter-2.png" alt="enter-2"/> Iniciar Sesion</button>
+<button class="btnLogin-popup d-flex align-items-center" id="btn-login"><img class="mx-1" width="20" height="20"
+        src="https://img.icons8.com/ios/20/enter-2.png" alt="enter-2" /> Iniciar Sesion</button>
 <div class="overlay">
     <div class="popup">
         <div class="wrapper">
@@ -17,10 +18,6 @@
                         <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
                         <input type="password" name="password" required>
                         <label for="">Contraseña</label>
-                    </div>
-                    <div class="remember-forgot">
-                        <label for="" class="text-light"><input type="checkbox"> Recordarme</label>
-                        <a href="#" class="text-light">Olvidé mi contraseña</a>
                     </div>
                     <button type="submit" class="btn btn-primary" id="login-btn">Login</button>
                     <div class="login-register">
