--- a/views/include/mailPassword.ejs
+++ b/views/include/mailPassword.ejs
@@ -15,9 +15,9 @@
                 </div>
                 <div class="modal-body">
                     <label for="user">Usuario: </label>
-                    <input type="text" name="user" id="user">
+                    <input type="text" name="user" id="user" required>
                     <label for="email">Correo: </label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" required>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
