--- a/views/template.html
+++ b/views/template.html
@@ -7,34 +7,33 @@
     <link rel="stylesheet" href="../resources/css/dashbard.css">
 </head>
 
-<body style="background-color: #ffffff;">
+<body style="background-color: #000000;">
     <div style="position: absolute; top: 15%; left: 40%;">
-        <form style="height: 500px; width: 350px; background-color: #000000; border-radius: 5%;" action="">
+        <div style="height: 550px; width: 350px; background-color: #000000; border-radius: 5%; margin: auto;">
             <div>
-                <h3 style="display:inline-block; color: #4280EF; padding-left: 3%;">¿Has olvidado tu <br> contraseña?
-                    </h1>
+                <h2 style="display:inline-block; color: #4280EF; padding-left: 3%;">¿Has olvidado tu <br> contraseña?
+                    </h2>
                     <img src="../resources/images/LOG23-01.png"
-                        style=" display:inline-block; margin-left: 15%; height: 15%; width: 20%;" alt="">
+                        style=" display:inline-block; margin-left: 15%; height: 20%; width: 20%;" alt="">
             </div>
             <div style="margin-top: 20px;">
-                <h4 style=" color: #ffffff; padding-top: 3%; padding-left: 3%;">Si usted no ha realizado ninguna
-                    peticion de cambio <br> de contraseña puede bloquear su cuenta.</h4>
-                <h4 style=" color: #ffffff; padding-top: 7%; padding-left: 3%;">Codigo de recuperación:</h4>
+                <h5 style=" color: #ffffff; padding-top: 3%; padding-left: 3%;">Si usted no ha realizado ninguna
+                    peticion de cambio <br> de contraseña puede bloquear su cuenta</h5>
+                <h5 style=" color: #ffffff; padding-top: 7%; padding-left: 3%;">Codigo de recuperación:</h5>
             </div>
             <div style="text-align: center; margin-top: 20px;">
-                <input style="margin-top: 2%; margin-left: 2%; height: 35px; width: 250px;" type="text">
+                <input style="margin: auto; height: 30px; width: 250px;" type="text">
             </div>
             <div style="text-align: center; margin-top: 20px;">
                 <button type="button"
-                    style="cursor: pointer; background-color: #4280EF; border-radius: 5px; margin-top: 5%; margin-left: 3%; height: 30px; width: 250px; font-size: medium; border: none;">Cambiar
-                    contraseña</button>
+                    style="cursor: pointer; background-color: #4280EF; border-radius: 5px; margin-bottom: 5%; height: 30px; width: 250px; font-size: medium; border: none;"><h5 style="color: #ffffff;">Cambiar contraseña</h5></button>
             </div>
             <footer
-                style="position: fixed; bottom: 32%; width: 18.22%; background-color: #4280EF; padding: 20px; text-align: center; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
-                <p>Copyright © 2023 Sublisivarte</p>
-                <p>Contacto: sublisivarte@email.com</p>
+                style="position: fixed-bottom; height: 8%; width: 100%; background-color: #4280EF; text-align: center; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
+                <h5 style="color: #ffffff;">Copyright © 2023 Sublisivarte</h5>
+                <h5 style="color: #ffffff;">Contacto: sublisivarte@email.com</h5>
             </footer>
-        </form>
+        </div>
     </div>
 </body>
 
