--- a/views/template.html
+++ b/views/template.html
@@ -26,7 +26,7 @@
             </div>
             <div style="text-align: center; margin-top: 20px;">
                 <button type="button"
-                    style="cursor: pointer; background-color: #4280EF; border-radius: 5px; margin-bottom: 5%; height: 30px; width: 250px; font-size: medium; border: none;"><h5 style="color: #ffffff;">Cambiar contraseña</h5></button>
+                    style="cursor: pointer; background-color: #4280EF; border-radius: 5px; margin-bottom: 5%; height: 30px; width: 250px; font-size: medium; border: none;"><h5 style="color: #ffffff;">wfwdwdwd contraseña</h5></button>
             </div>
             <footer
                 style="position: fixed-bottom; height: 8%; width: 100%; background-color: #4280EF; text-align: center; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
