--- a/views/account.ejs
+++ b/views/account.ejs
@@ -23,7 +23,7 @@
                 <div class="row py-2">
                     <div class="col-4">
                         <label for="email" class="form-label">Correo</label>
-                        <input type="email" class="form-control " id="email"
+                        <input type="email" class="form-control " id="mail"
                             placeholder="" required name="email">
                     </div>
                     <div class="col-4">
