--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -11,7 +11,7 @@
                 <form autocomplete="off" id="login">
                     <div class="imput-box">
                         <span class="icon"><ion-icon name="user"></ion-icon></span>
-                        <input type="text" required name="user" id="user">
+                        <input type="text" required name="user" id="username">
                         <label for="">Usuario</label>
                     </div>
                     <div class="imput-box">
