--- a/views/account.ejs
+++ b/views/account.ejs
@@ -15,8 +15,8 @@
                             placeholder="" required name="lastname">
                     </div>
                     <div class="col-4">
-                        <label for="username" class="form-label ">Usuario</label>
-                        <input type="text" class="form-control " id="username"
+                        <label for="username-account" class="form-label ">Usuario</label>
+                        <input type="text" class="form-control " id="username-account"
                             placeholder="" required name="user">
                     </div>
                 </div>
@@ -32,8 +32,8 @@
                             placeholder="" required name="document">
                     </div>
                     <div class="col-4">
-                        <label for="password" class="form-label">Clave</label>
-                        <input type="password" class="form-control " id="password"
+                        <label for="password-account" class="form-label">Clave</label>
+                        <input type="password" class="form-control " id="password-account"
                             placeholder="" required name="password">
                     </div>
                 </div>
