--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -141,10 +141,7 @@
                                             target="_blank">Reporte</a>                                       
                                     </td>
                                     <td>
-                                        <button class="btn btn-danger"><a href="/cancel/orders/<%= data._id %>"
-                                                class="text-light">Cancelar pedido</a></button>
-                                        <button class="btn btn-danger"><a href="/delete/orders/<%= data._id %>"
-                                                class="text-light">Cancelar</a></button>
+                                        <button class="btn btn-danger" id="cancel-order">Cancelar Pedido</button>
                                     </td>
                                 </tr>
                         </tbody>
